--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
+config.py
 *$py.class
+
+#Libraries
+Resources/Libraries/
 
 # C extensions
 *.so
